--- a/style.css
+++ b/style.css
@@ -79,7 +79,9 @@ img {
 
 #header-iframe {
     width: 100%;
-    height: 35%;
+    height: 35vh;
+    margin: 0;
+    padding: 0;
     border: none;
   }
 
