--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
 body {
     margin: 0;
     padding: 0;
+    background-image: url(images/cement-texture.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
   }
 
 .container {
@@ -81,6 +86,11 @@ body {
   margin-left: 15%;
   margin-right: 20%;
   font-size: large;
+  background-image: url(images/cement-texture.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .emphasis {
