--- a/style.css
+++ b/style.css
@@ -131,6 +131,14 @@ img {
   margin-right: auto;
 }
 
+.img_centered {
+  max-width: 70%;
+  height: auto;
+  padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .network {
   display: flex;
   flex-direction: row;
