--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 .sidebar a {
   text-decoration: none;
   color: black;
-  font-size: large;
+  font-size: x-large;
   margin-bottom: 10px;
 }
 
